# react-tauri

./: .eslintrc  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  riot.txt  tsconfig.json  vite.config.ts
.github/workflows/: Build_app.yml
docs/: errors.md
scripts/: assets.js  champions.js  constants.js  items.js  runes.js  utils.js
src/: App.tsx  logic.jsx  logic.tsx  main.jsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data_dragon/: Cargo.toml
src-tauri/data_dragon/src/: lib.rs  types.rs
src-tauri/data_dragon/src/requests/: champs.rs  items.rs  runes.rs  summoners.rs
src-tauri/src/: core.rs  errors.rs  extensions.rs  frontend_types.rs  logic.rs  main.rs  plugins.rs  shared.rs  templates.rs  tests.rs  translation.json
src-tauri/src/core/: community_dragon.rs  data_dragon.rs  helpers.rs  lcu.rs
src-tauri/src/core/community_dragon/: champs.rs  items.rs  runes.rs  structs.rs  summoners.rs  templates.rs
src-tauri/src/core/data_dragon/: champs.rs  items.rs  runes.rs  structs.rs  summoners.rs  templates.rs  tests.rs
src-tauri/src/core/helpers/: champs.rs  runes.rs  structs.rs
src-tauri/src/core/lcu/: items.rs  runes.rs
src-tauri/src/extensions/: ugg.rs
src-tauri/src/extensions/lcu/: runes.rs
src-tauri/src/extensions/ugg/: abilities.rs  constants.rs  items.rs  json.rs  rates.rs  requests.rs  runes.rs  shards.rs  structs.rs  summoners.rs  tests.rs
src-tauri/src/plugins/: lcu.rs  ugg.rs
src-tauri/src/plugins/ugg/: abilities.rs  constants.rs  items.rs  rates.rs  requests.rs  runes.rs  shards.rs  structs.rs
src-tauri/src/shared/: data_dragon.rs  helpers.rs
src-tauri/src/shared/data_dragon/: champs.rs  structs.rs
src-tauri/src/shared/helpers/: champs.rs  runes.rs
src-tauri/src/tests/: community_dragon.rs  data_dragon.rs  ugg.rs
src/interfaces/: Abilities.ts  AutoCompleteOption.ts  CachedData.ts  ChampionBuild.ts  ChampionInfo.ts  ChampionInfoResponse.ts  Context.ts  InitialData.ts  InvokeAndCacheProps.ts  Items.ts  (+8 more)
(+28 files in other folders)
