[package]
name = "react-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["objc-exception", "wry"], default-features = false }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21", features = ["macros"] }
once_cell = { version = "1.16" }
futures = { version = "0.3" }
irelia = "0.1"
moka = { version = "0.9", features = ["future"] }
data_dragon = { path = "./data_dragon" }
hyper =  { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.production]
inherits = "release"
lto = true
opt-level = "s"
strip = "symbols"
rpath = true
debug = false

[workspace]
members = [
    ".",
    "data_dragon"
]
