[package]
name = "data_dragon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["json"] }
hyper =  { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5.0"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
moka = { version = "0.9", features = ["future"] }
once_cell = { version = "1.16" }
tokio = "1.21"